--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,
 encoding: "utf-8"
 favicon: favicon.ico 
 
-repository: storm-f/storm-f.github.io
-github_url: https://github.com/storm-f
+repository: Storm-f/storm-f.github.io
+github_url: https://github.com/Storm-f
 url: https://storm-f.github.io
 
 
