--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,9 @@ footer:
 
 # Author 配置博主信息
 author: 'F'
-nickname: '李水'
-bio: '前端开发者，热爱技术&设计，简单乐观爱创造'
-avatar: '/assets/img/profile.png'
+nickname: ''
+bio: '某混子程序员。'
+avatar: '/assets/img/captain.jpg'
 
 # Search
 search: true
@@ -46,19 +46,19 @@ comments:
 mathjax: true
 
 # Share
-social-share: true
-social-share-items: ['wechat', 'weibo', 'douban', 'twitter']
+#social-share: true
+#social-share-items: ['wechat', 'weibo', 'douban', 'twitter']
 
 # theme color 主题皮肤
 theme-color: 'default'  # pink or default
 
 # SNS settings 配置社交网站
 # url: email, weibo, zhihu, twitter, instagram, juejin, github, douban, facebook, dribble, uicn, jianshu, medium, linkedin
-sns:
-  weibo: '//weibo.com/lovecolcol'
-  juejin: '//juejin.im/user/57a6f434165abd006159b4cc'
-  instagram: '//www.instagram.com/steveliaocn'
-  github: '//github.com/kaeyleo'
+#sns:
+  #weibo: '//weibo.com/lovecolcol'
+  #juejin: '//juejin.im/user/57a6f434165abd006159b4cc'
+  #instagram: '//www.instagram.com/steveliaocn'
+  #github: '//github.com/kaeyleo'
 
 # Tags 设置标签
 recommend-tags: true # whether or not display recommend-tags on the sidebar
