--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ footer:
 # Author 配置博主信息
 author: 'F'
 nickname: ''
-bio: '某混子程序员。'
-avatar: '/assets/img/captain.jpg'
+bio: '某弟弟程序员。'
+avatar: '/assets/img/cap.jpg'
 
 # Search
 search: true
